# Cifar10Converter

./: CMakeLists.txt  LICENSE
Sources/: Batch.cpp  Batch.hpp  Converter.cpp  Cxx.hpp  DefaultLogger.cpp  DefaultLogger.hpp  Image.cpp  Image.hpp  Reader.cpp  Types.cpp  Types.hpp  main.cpp
Tests/: ResizeTest.cpp
